--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,11 @@ body {
   padding: 0;
 }
 
+.logo {
+  height: 300px;
+  width: auto;
+  vertical-align: middle;
+}
 * {
   box-sizing: border-box;
   margin: 0;
