--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ body {
   line-height: 1.6;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 .top-bar {
@@ -56,7 +57,7 @@ body {
 }
 
 .top-bar a:hover {
-  color: var(--lite-blue);
+  color: var(--lite-orange);
 }
 .top-bar.scrolled {
   background-color: var(--lite-blue)
@@ -139,4 +140,9 @@ h1 {
 h2 {
   font-size: 2em;
   font-weight: 500;
+}
+
+.swiper-slide {
+  width: 100%;
+  height: auto;
 }
