--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 65vh;
-  background-image: url("/icons/headerimg.png"); /* Update this path to your image */
+  background-image: url("../icons/headerimg.png"); /* Update this path to your image */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
