--- a/css/style.css
+++ b/css/style.css
@@ -192,7 +192,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: scale-down;
   transition: transform 0.3s ease;
 }
 
