TRYING TO FIX MOBILE COMPATIBILITY, KILL ME

--- a/css/style.css
+++ b/css/style.css
@@ -330,8 +330,8 @@ h2 {
   }
 
   .slide-content img {
-    height: 50vh;
-    object-fit: contain;
+    width: 100%;
+    height: 100%;
   }
 
   .swiper-main {
@@ -403,8 +403,8 @@ h2 {
   }
 
   .slide-content img {
-    height: 50vh;
-    object-fit: cover;
+    width: 100%;
+    height: 100%;
   }
 
   .swiper-button-next,
